[package]
name = "lerna_py"
version = "2.0.1"
edition = "2021"
publish = false

[lib]
name = "lerna"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lerna = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
