[package]
name = "lerna"
version = "1.1.0"
authors = ["the lerna authors <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/lerna"
description = ""

[lib]
name = "lerna"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
rand = "0.9"

[dev-dependencies]
tempfile = "3.10"

[profile.test.junit]
path = "junit.xml"

